quick refactorings I