@@ -1,8 +1,17 @@
 package app.editors.flow;
 
-import java.util.Objects;
-import java.util.stream.Collectors;
-
+import app.App;
+import app.M;
+import app.Tooltips;
+import app.editors.Editors;
+import app.editors.RefSelectionDialog;
+import app.rcp.Icon;
+import app.store.RefDeps;
+import app.util.Actions;
+import app.util.Tables;
+import app.util.UI;
+import app.util.Viewers;
+import app.util.tables.ModifySupport;
 import org.eclipse.jface.viewers.ITableFontProvider;
 import org.eclipse.jface.viewers.ITableLabelProvider;
 import org.eclipse.jface.viewers.LabelProvider;
@@ -19,18 +28,7 @@ import org.openlca.ilcd.flows.Flow;
 import org.openlca.ilcd.flows.FlowPropertyRef;
 import org.openlca.ilcd.util.Flows;
 
-import app.App;
-import app.M;
-import app.Tooltips;
-import app.editors.Editors;
-import app.editors.RefSelectionDialog;
-import app.rcp.Icon;
-import app.store.RefDeps;
-import app.util.Actions;
-import app.util.Tables;
-import app.util.UI;
-import app.util.Viewers;
-import app.util.tables.ModifySupport;
+import java.util.Objects;
 
 class FlowPropertySection {
 
@@ -56,7 +54,7 @@ class FlowPropertySection {
 		var comp = UI.sectionClient(section, tk);
 		UI.gridLayout(comp, 1);
 		table = Tables.createViewer(comp,
-				M.FlowProperty, M.ConversionFactor, M.Unit);
+			M.FlowProperty, M.ConversionFactor, M.Unit);
 		table.setLabelProvider(new Label());
 		table.setInput(Flows.getFlowProperties(flow));
 		Tables.bindColumnWidths(table, 0.4, 0.3, 0.3);
@@ -72,10 +70,10 @@ class FlowPropertySection {
 		bindActions(section);
 		var modifier = new ModifySupport<FlowPropertyRef>(table);
 		modifier.onDouble(M.ConversionFactor, propRef -> propRef.meanValue,
-				(propRef, value) -> {
-					propRef.meanValue = value;
-					editor.setDirty();
-				});
+			(propRef, value) -> {
+				propRef.meanValue = value;
+				editor.setDirty();
+			});
 		Tables.onDoubleClick(table, e -> {
 			FlowPropertyRef ref = Viewers.getFirstSelected(table);
 			if (ref != null) {
@@ -88,7 +86,7 @@ class FlowPropertySection {
 		var add = Actions.create(M.Add, Icon.ADD.des(), this::add);
 		var rem = Actions.create(M.Remove, Icon.DELETE.des(), this::remove);
 		var ref = Actions.create(M.SetAsReference,
-				Icon.des(DataSetType.FLOW_PROPERTY), this::setRef);
+			Icon.des(DataSetType.FLOW_PROPERTY), this::setRef);
 		Actions.bind(section, add, rem);
 		Actions.bind(table, ref, add, rem);
 	}
@@ -99,9 +97,9 @@ class FlowPropertySection {
 			return;
 		var propRef = new FlowPropertyRef();
 		var existingIDs = Flows.getFlowProperties(flow)
-				.stream()
-				.map(pr -> pr.dataSetInternalID)
-				.collect(Collectors.toList());
+			.stream()
+			.map(pr -> pr.dataSetInternalID)
+			.toList();
 		propRef.dataSetInternalID = 0;
 		while (existingIDs.contains(propRef.dataSetInternalID)) {
 			propRef.dataSetInternalID = propRef.dataSetInternalID + 1;
@@ -116,7 +114,7 @@ class FlowPropertySection {
 		}
 		table.setInput(Flows.getFlowProperties(flow));
 		if (materialPropertySection != null
-				&& PropertyDepsDialog.add(editor.product)) {
+			&& PropertyDepsDialog.add(editor.product)) {
 			table.setInput(Flows.getFlowProperties(flow));
 			materialPropertySection.refresh();
 		}
@@ -152,7 +150,7 @@ class FlowPropertySection {
 	}
 
 	private class Label extends LabelProvider implements ITableLabelProvider,
-			ITableFontProvider {
+		ITableFontProvider {
 
 		@Override
 		public Image getColumnImage(Object element, int col) {
@@ -163,35 +161,33 @@ class FlowPropertySection {
 
 		@Override
 		public String getColumnText(Object obj, int col) {
-			if (!(obj instanceof FlowPropertyRef))
+			if (!(obj instanceof FlowPropertyRef ref))
 				return null;
-			var ref = (FlowPropertyRef) obj;
 			switch (col) {
-			case 0:
-				Ref propRef = ref.flowProperty;
-				if (propRef == null)
+				case 0:
+					Ref propRef = ref.flowProperty;
+					if (propRef == null)
+						return null;
+					return LangString.getFirst(propRef.name, App.lang());
+				case 1:
+					return Double.toString(ref.meanValue);
+				case 2:
+					return RefDeps.getRefUnit(ref.flowProperty);
+				default:
 					return null;
-				return LangString.getFirst(propRef.name, App.lang());
-			case 1:
-				return Double.toString(ref.meanValue);
-			case 2:
-				return RefDeps.getRefUnit(ref.flowProperty);
-			default:
-				return null;
 			}
 		}
 
 		@Override
 		public Font getFont(Object obj, int col) {
-			if (!(obj instanceof FlowPropertyRef))
+			if (!(obj instanceof FlowPropertyRef ref))
 				return null;
 			var qRef = Flows.getQuantitativeReference(flow);
 			if (qRef == null)
 				return null;
-			var ref = (FlowPropertyRef) obj;
 			return Objects.equals(ref.dataSetInternalID, qRef.referenceFlowProperty)
-					? UI.boldFont()
-					: null;
+				? UI.boldFont()
+				: null;
 		}
 	}
 }
